--- a/index.html
+++ b/index.html
@@ -14,33 +14,37 @@
             <p>Digite seu nome:</p>
             <input type="text" name="userName" size=40
             maxlength=35 placeholder="Digite seu nome completo">
-            <br></br>
+            <p>
             <p>Digite sua profissão:</p>
             <input type="text" name="userJob" size=40 maxlength=35 placeholder="Digite sua profissão">
-            <br></br>
+            <p></p>
             <p>Nos conte um pouco sobre você:</p>
             <textarea name="userComent" cols="30" rows="4" maxlength=35 placeholder="Faça um breve comentário" textarea>
             </textarea>
             <p>Você faz exercicios regularmente?</p>
             <input type="radio" name="exercise" value=1>Sim
-            <p></p><input type="checkbox" name="Dias da Semana:">Segunda-Feira
+        </p>
+            <p>
+                <input type="checkbox" name="Dias da Semana">Segunda-Feira
                 <input type="checkbox" name="Dias da Semana">Terça-Feira
                 <input type="checkbox" name="Dias da Semana">Quarta-Feira
                 <input type="checkbox" name="Dias da Semana">Quinta-feira
                 <input type="checkbox" name="Dias da Semana">Sexta-feira
-                <input type="checkbox" name="Dias da Semana">Sábado  
-                <br></br>
+                <input type="checkbox" name="Dias da Semana">Sabado  
+                <p>
                 <input type="radio" name="exercise" value=2>Não pratico nenhuma atividade fisica
-            </p></p>
-            <br></br>
+            </p>
+
+            </p>
+            <p>
             <p>Por onde você lê sobre os assuntos que você mais gosta?</p>
             <input type="checkbox" name="Books">Livros
             <input type="checkbox" name="Web">Sites
             <input type="checkbox" name="Apps">Aplicativos
             <input type="checkbox" name="Magazines">Revistas
-            <br></br>
+            </p>
 
-            <n>Qual gênero de filme que você mais gosta?</n>
+            <p> Qual gênero de filme que você mais gosta? 
             <select name="moviePref">
                 <option>
                     <option value="1">Comédia
@@ -49,10 +53,12 @@
                     <option value="4">Terror
                     <option value="1">Ação
                     </option>
+                </p>
             </select>
-            <br></br>
+            <p>
             <input type="submit" value="ENVIAR">
         </section>
+    </p>
     </form>
 
 </body>
